welcome.lessons.welcome.bat.bool1.Max1020.scala.code
def max1020(a:Int, b:Int):Int = {
	if (a>=10 && a<=20) {var a_1=a}
	else {var a_1=0}
	if (b>=10 && b<=20) {var b_1=b}
	else {var b_1=0}
	return Math.max(a_1,b_1)
}
